--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                     <a href="https://www.instagram.com/naresh_ram1" target="_blank"><img src="./logos/instagram.png"class="logos" ></a>
                     <a href="https://www.linkedin.com/in/naresh-ram-57b763224" target="_blank"><img src="./logos/linkedin.png" class="logos"></a>
                     <a href="https://twitter.com/Nareshram_1?t=ymFacgHa85NC6KU_QeXOiQ&s=09" target="_blank"><img src="./logos/twitter.png" class="logos" id="the_end"></a>
-                 
+                    <a href="https://www.snapchat.com/add/naresh_ram1?" target="_blank"><img src="./logos/snap2.png" class="logos" class="end"  ></a>
+
 
              </div>
     </section>
